added the bonus and footer section

--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,9 @@
 }
 
 .heading {
-    display: flex;
+    display: inline-flex;
     gap: 10px;
+
 }
 
 nav a {
@@ -318,6 +319,37 @@ form>input {
     background: #FF5400;
 }
 
+/* Footer Section Style */
+
+.footer-section {
+    margin-top: 200px;
+    width: 100%;
+    height: 500px;
+    background: rgba(19, 19, 24, 0.05);
+    padding-top: 100px;
+}
+
+.footer-description {
+    text-align: center;
+    align-items: center;
+}
+
+.footer-icons {
+    text-align: center;
+    align-items: center;
+}
+
+.footer-header {
+    color: var(--Dark-01, #131318);
+    font-family: Mulish;
+    font-size: 30px;
+    font-weight: 800;
+}
+.last{
+    text-align: center;
+    align-items: center;
+    padding-top: 100px;
+}
 
 /* For Mobile Device */
 
@@ -337,6 +369,9 @@ form>input {
         margin: 2px;
         width: 100%;
         background-position: center;
+    }
+    .banner-inputs {
+        flex-direction: column;
     }
 
     .banner-heading {
